Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -300,6 +300,7 @@ mapVault.upload.uploading = Karte wird hochgeladen…
 mapVault.upload.compressing = Komprimiere Karte…
 mapVault.upload.complete = Hochladen abgeschlossen
 mapVault.upload.complete.hint = WARNUNG\: Da der Server deine Dateien möglicherweise umbenannt hat, wird dringend empfohlen, deine Map zu entfernen und sie stattdessen via Vault zu installieren.
+# Fuzzy
 mapVault.upload.failed = Karte konnte nicht hochgeladen werden. Der Server meldete folgende Fehler\:\n\n{0}
 mapVault.upload.mapSize = Größe
 mapVault.upload.players = Spieler
@@ -431,7 +432,6 @@ yearAgo = Vor {0,number,#} Jahr
 yearsAgo = Vor {0,number,#} Jahren
 settings.languages.restart.message = Du hast die Sprache geändert. Dies erfordert einen Neustart.
 # Message key and English translation say "Restart", German means "Close".
-# Fuzzy
 settings.languages.restart = Neustart
 settings.languages.system = Auto
 settings.time.system = Auto
@@ -594,8 +594,7 @@ search.sort = Sortiere nach
 vault.mods.searchError = Mods konnten nicht geladen werden
 noDateAvailable = Kein Datum verfügbar
 map.created = Erstellt\:
-# Fuzzy
-modType.ui = Ui Mod
+modType.ui = UI Mod
 modType.sim = Sim Mod
 menu.connect = Verbinde
 gameChosen.invalidPath = Ungültiger Pfad
@@ -630,6 +629,7 @@ settings.language = Sprache
 settings.notifications.toastPreview = Vorschau
 settings.notifications.toastPreview.title = Popup Vorschau
 settings.notifications.toastPreview.text = So sieht es aus.
+# Fuzzy
 settings.language.helpUs.text = Die Übersetzung von Downlord's Client ist ein Gemeinschaftsprojekt. Wenn du eine Übersetzung in eine andere Sprache wünscht, würden wir uns über deine Hilfe freuen.
 settings.language.helpUs.button = Hilf bei der Übersetzung
 # Fuzzy
@@ -687,7 +687,7 @@ view.hideSidePane = Verstecke Details
 menu.revealReplayFolder = Öffne Replay Ordner
 # English says it opens a file while the game client function actually opens the folder which contains the file
 menu.revealGamePrefsFile = Öffne game.pref Ordner
-ranked1v1.queuePopTimer = Matche in {0,number,0}\:{1,number,00}
+ranked1v1.queuePopTimer = Partie wird erstellt in\: {0,number,0}\:{1,number,00}
 # Fuzzy
 game.create.generatedMap = Neue Karte generieren
 game.avgRating.format = {0,number,#}
@@ -696,8 +696,7 @@ game.mapGeneration.notification.message = Bitte warten. (Version\: {0}, Seed\: {
 game.mapGeneration.failed.title = Konnte Karte nicht generieren
 game.mapGeneration.failed.message = Die Generierung der zufälligen Karte ist fehlgeschlagen. Das Programm zur Generierung wird beendet.(timeout)
 game.mapGeneration.downloadGenerator.title = Lade Karten Generator {0} herunter
-# Fuzzy
-game.mapGeneration.generateMap.title = Generiere Karte… (Version\: {0}, Seed\: {1})
+game.mapGeneration.generateMap.title = Generiere Karte… (Version\: {0})
 login.environment = Serverumgebung
 login.button.downloadUpdate = Neuste Version herunterladen
 login.button.downloadPreparing = Bereite Download vor
@@ -815,6 +814,7 @@ startTab.configure = Konfigurieren
 vault.replays.onlyShowLastYear = Nur ein Jahr alte
 # Fuzzy
 game.create.spawnCount = Anzahl Spieler
+# Fuzzy
 game.create.mapSize = Kartengröße
 game.generate = Generiere eine neue Karte
 game.generate.recreate = Karte mit folgendem Kartennamen neu generieren\:
@@ -841,11 +841,12 @@ mod.manager.simModsTooltip = SIM Mods beeinflussen das Spiel für alle Spieler.
 mod.manager.uiModsTooltip = UI Mods beeinflussen nur dein Spielerlebnis.
 modVault.modManager = Verwalte aktivierte mods
 modVault.manageMods = Verwalte aktivierte mods
-theme.needsRestart.message = Das Wechseln zu Themen ''{0}'' bedarf einem Neustart.
+theme.needsRestart.message = Das Wechseln zu Thema "{0}" bedarf eines Neustarts.
 theme.needsRestart.quit = Beenden
 vault.loading = Lade…
 vault.displayQuery = Zeige Abfrage
 vault.queryPrompt = Erstelle oben eine Abfrage or gebe direkt eine ein
+# Fuzzy
 vault.searchError = Bei der Suche ist ein Fehler aufgetreten.
 vault.upload = Upload…
 replay.team = Team {0}
@@ -996,13 +997,16 @@ search.lowValue = Minimum
 search.highValue = Maximum
 search.afterDate = Startdatum
 search.beforeDate = Enddatum
+search.removeQuery = Lösche Abfrage
+leaderboard.divisionName = In Platzierung
 teammatchmaking.leaveParty = Gruppe verlassen
 teammatchmaking.invitePlayer = Spieler einladen
 teammatchmaking.invite = Einladen
 teammatchmaking.invitedPlayers = Eingeladene Spieler\:
 teammatchmaking.mapPool = Kartenliste
 teammatchmaking.playersInQueue = In Warteschlange\: {0,number,#}
-teammatchmaking.gameCount = Gespielte Spiele\: {0,number,\#)
+teammatchmaking.queuePopTimer = Partie wird erstellt in\: {0,number,0}\:{1,number,00}
+teammatchmaking.gameCount = Gespielte Spiele\: {0,number,#}
 teammatchmaking.notification.invite.title = Zu Gruppe eingeladen
 teammatchmaking.notification.invite.message = {0} hat dich eingeladen seiner Gruppe beizutreten
 teammatchmaking.notification.invite.join = Beitreten
@@ -1026,8 +1030,10 @@ teammatchmaking.queueTitle.inGame = Du kannst keiner Warteschlange beitreten wä
 teammatchmaking.queueTitle.memberInGame = Du kannst keiner Warteschlange beitreten während jemand im Spiel ist
 teammatchmaking.queueTitle.inParty = Der Party-Leader wird den Warteschlangen beitreten
 teammatchmaking.queueTitle.inQueue = Deine Gruppe ist jetzt in der Warteschlange
-teammatchmaking.queue.ladder1v1 = 1v1 spielen
-teammatchmaking.queue.tmm2v2 = 2v2 spielen
+# Fuzzy
+teammatchmaking.queue.ladder1v1 = 1v1
+# Fuzzy
+teammatchmaking.queue.tmm2v2 = 2v2
 chat.groupChat.playerDisconnect = {0} ist ausgetreten
 chat.groupChat.playerConnect = {0} ist beigetreten
 game.generateMap.mexSlider = Mexes
@@ -1052,6 +1058,7 @@ map.updater.search = Suche nach einer neuen Version der Karte
 teammatchmaking.chat.topic = Finde Mitspieler und erhalte Gameplaytips auf unserem offiziellem Discord\:
 getHelp = Erhalte Unterstützung
 copyError = Kopiere Fehler
+# Fuzzy
 game.crash = Es sieht so aus als wäre Supreme Commander\: Forged Alliance abgestürzt. Schaue dir das Spielelog {0} an für mehr Informationen.
 replayNotAvailable = Replay {0,number,#} ist noch nicht vom Server erhältlich. Bitte versuche es später noch einmal.
 close = Schließen
@@ -1098,6 +1105,7 @@ management.maps.officialMaps = Offizielle Karten
 management.maps.uninstall.error = Kann Karte nicht deinstallieren.
 game.generateMap.commandLine = Kommandozeilenargumente
 game.generateMap.style = Kartenstil
+game.replayNotAvailable = Replay Datei momentan noch nicht verfügbar
 game.filter.numberOfPlayers = Anzahl Spieler
 game.filter.mapHeight = Kartenhöhe, in km
 game.filter.mapWidth = Kartenbreite, in km
@@ -1106,6 +1114,9 @@ game.create.numTeams = Anzahl der Teams
 teammatchmaking.searchAndInvite = Suche und lade Spieler ein
 teammatchmaking.search.prompt = Name
 teammatchmaking.search.noOneInvited = Du hast noch niemanden eingeladen.
+game.create.errorUpdatingMods = Konnte die ausgewählten Mods nicht aktualisieren. Dies liegt möglicherweise an Ordner Berechtigungseinstellungen. Die Mod bei der Spielerstellung nicht auszuwählen verhindert diesen Fehler.
+settings.data.mapAndModAutoUpdate = Automatische Aktualisierung für Karten und Mods
+settings.data.mapAndModAutoUpdate.description = Lädt automatisch die neuste Version einer Karte oder einer Mod wenn man diese hostet. Es ist empfohlen diese Option anzulassen um Fehlerbehebungen und die neuste funktionierende Version zu bekommen.
 player.info.rating = Rating\:
 modVault.recommended = M&M Top-Auswahl
 map.all = Alle Versionen
@@ -1118,3 +1129,10 @@ session.expired.title = Sitzung abgelaufen
 session.expired.message = Bitte gib deine Login-Details erneut ein
 login.error = Fehler beim Login\: {0}; {1}
 discord.couldNotOpen = Spiel konnte nicht via Discord geöffnet werden
+login.offlineServices.title = Einige Dienste sind momentan offline
+login.offlineService.text = "{0}" ist offline seit {1}. {2}.
+reasonUnknown = Grund unbekannt
+temporalRange = Von {0} bis {1}
+login.playOffline = Spiele Offline
+offline.noExe = Spiel wurde nicht im FAF Ordner gefunden. Um offline spielen zu können musst du dich mindestens einmal einloggen und die notwendigen FAF Dateien herunterladen.
+offline.error = Es gab einen Fehler beim Versuch das Spiel zu starten
