Update messages_iw.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_iw.properties
+++ b/src/main/resources/i18n/messages_iw.properties
@@ -301,6 +301,7 @@ mapVault.upload.uploading = מעלה מפה…
 mapVault.upload.compressing = דוחס מפה…
 mapVault.upload.complete = העלאה הושלמה
 mapVault.upload.complete.hint = אזהרה\: כיוון שהשרת עשוי לשנות את שם המפה, מומלץ למחוק את המפה מתיקיית המפות ולהתקין אותה דרך הכספת.
+# Fuzzy
 mapVault.upload.failed = לא היה ניתן להעלות את המפה. השרת נתן את השגיאות הבאות\:\n\n{0}
 mapVault.upload.mapSize = גודל
 mapVault.upload.players = שחקנים
@@ -622,6 +623,7 @@ settings.language = שפה
 settings.notifications.toastPreview = תצוגה מקדימה
 settings.notifications.toastPreview.title = תצוגה מקדימה
 settings.notifications.toastPreview.text = כך זה נראה.
+# Fuzzy
 settings.language.helpUs.text = התאמה מקומית של תוכנה זו היא מאמץ קהילתי. במידה ואתה רוצה לראות את התוכנה מתורגמת לשפה המקומית שלך נשמח אם תעזור לנו.
 settings.language.helpUs.button = עזור לנו לתרגם
 # Fuzzy
