Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -301,6 +301,7 @@ mapVault.upload.uploading = Caricamento mappa...
 mapVault.upload.compressing = Compressione mappa...
 mapVault.upload.complete = Caricamento completato
 mapVault.upload.complete.hint = ATTENZIONE\: Dato che il server potrebbe aver rinominato i tuoi file, è fortemente raccomandato rimuovere la mappa dalla cartella mappe e installarla attraverso l'archivio mappe.
+# Fuzzy
 mapVault.upload.failed = Impossibile caricare la mappa. Il Server a restituito i seguenti errori\: \n\n{0}
 mapVault.upload.mapSize = Dimensione
 mapVault.upload.players = Giocatori
@@ -622,6 +623,7 @@ settings.language = Lingua
 settings.notifications.toastPreview = Anteprima
 settings.notifications.toastPreview.title = Anteprima toast
 settings.notifications.toastPreview.text = Così è come appare.
+# Fuzzy
 settings.language.helpUs.text = La localizzazione del Client FAF Downlord è uno sforzo della comunità. Se vuoi vedere il client tradotto in un'altra lingua noi ameremo il tuo aiuto.
 settings.language.helpUs.button = Aiutaci a tradurre
 # Fuzzy
@@ -805,6 +807,7 @@ startTab.configure = Configura
 vault.replays.onlyShowLastYear = Solo dall'anno scorso
 # Fuzzy
 game.create.spawnCount = Numero di spawn
+# Fuzzy
 game.create.mapSize = Dimensione Mappa
 game.generate = Genera nuova mappa
 game.generate.recreate = Rigenera mappa usando il seguente nome\:
@@ -837,6 +840,7 @@ theme.needsRestart.quit = Esci
 vault.loading = Caricamento...
 vault.displayQuery = Visualizza query di ricerca
 vault.queryPrompt = Crea una query sopra o inseriscila manualmente
+# Fuzzy
 vault.searchError = Errore riscontrato durante la ricerca.
 vault.upload = Caricamento...
 replay.team = Squadra {0}
@@ -1026,7 +1030,9 @@ teammatchmaking.queueTitle.inGame = Impossibile entrare in coda mentre sei in un
 teammatchmaking.queueTitle.memberInGame = Impossibile entrare in coda mentre qualcuno è in una partita
 teammatchmaking.queueTitle.inParty = Il leader del party entrerà nelle code
 teammatchmaking.queueTitle.inQueue = Il tuo party è ora in coda
+# Fuzzy
 teammatchmaking.queue.ladder1v1 = Coda 1v1
+# Fuzzy
 teammatchmaking.queue.tmm2v2 = Coda 2v2
 chat.groupChat.playerDisconnect = {0} si è disconnesso
 chat.groupChat.playerConnect = {0} si è connesso
@@ -1054,6 +1060,7 @@ teammatchmaking.chat.topic = Trova compagni di squadra e ricevi avvisi sul gamep
 getHelp = Ricevi Aiuto
 copyError = Copia Errore
 findHelp = Se questo errore persiste usa il pulsante "Ricevi Aiuto" per aprire il forum di aiuto. Verifica prima le FAQ e i topic esistenti. Se crei un nuovo topic perfavore includi i log che possono essere aperti dal menù in alto a sinistra del client.
+# Fuzzy
 game.crash = Sembra che Supreme Commander\: Forged Alliance ha crashato, verifica il log di gioco {0} per ulteriori informazioni
 replayNotAvailable = Il replay {0,number,#} non è ancora disponibile su server. Perfavore riprova successivamente.
 close = Chiudi
