Update messages_pl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -323,6 +323,7 @@ mapVault.upload.uploading = Wstawianie mapy...
 mapVault.upload.compressing = Kompresowanie mapy...
 mapVault.upload.complete = Wstawianie zakończone
 mapVault.upload.complete.hint = UWAGA\: Serwer mógł zmienić nazwy twoich plików, więc jest wysoce alecanene aby usunąć twoją mapę z folderu map i zainstalować ją ze skarbnicy.
+# Fuzzy
 mapVault.upload.failed = Mapa nie została wstawiona. Serwer napotkał błędy\:\n\n{0}
 mapVault.upload.mapSize = Rozmiar
 mapVault.upload.players = Gracze
@@ -646,6 +647,7 @@ settings.language = Język
 settings.notifications.toastPreview = Podgląd
 settings.notifications.toastPreview.title = Podgląd powiadomienia
 settings.notifications.toastPreview.text = Tak to wygląda.
+# Fuzzy
 settings.language.helpUs.text = Klient FAF Downlorda jest wysiłkiem całej społeczności. Jeśli chciałbyś zobaczyć inną wersję językową, twoja pomoc będzie bezcenna.
 settings.language.helpUs.button = Pomóż tłumaczyć
 # Fuzzy
@@ -813,6 +815,7 @@ startTab.configure = Konfiguruj
 vault.replays.onlyShowLastYear = Jedynie z ostatniego roku
 # Fuzzy
 game.create.spawnCount = Ilość pozycji startowych
+# Fuzzy
 game.create.mapSize = Rozmiar mapy
 game.generate = Utwórz nową mapę
 game.generate.recreate = Przetwórz mapę z użyciem następującej nazwy\:
@@ -838,6 +841,7 @@ modVault.manageMods = Zarządzaj aktywnymi modami
 theme.needsRestart.quit = Koniec
 vault.loading = Wczytywanie...
 vault.displayQuery = Wyświetl rezultat wyszukiwania
+# Fuzzy
 vault.searchError = podczas wyszukiwania wystąpił błąd
 vault.upload = Wstaw...
 replay.team = Drużyna {0}
@@ -926,5 +930,6 @@ chat.groupChat.playerDisconnect = {0} rozłączył się
 chat.groupChat.playerConnect = {0} podłączył się
 copyError = Błąd kopiowania
 findHelp = Jeśli błąd nadal występuje, użyj przycisku Pomoc, aby otworzyć oficjalne forum. Najpierw jednak sprawdź nasze FAQ i pozostałe tematy innych użytkowników. Jeśli stworzysz nowy temat zamieść logi klienta (menu w górnym lewym rogu).
+# Fuzzy
 game.crash = Supreme Commander\: Forged Alliance zawiesił się, sprawdź log {0} ,aby uzyskać więcej informacji
 close = Zamknij
