Update messages_es.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -310,6 +310,7 @@ mapVault.upload.uploading = Subiendo mapa...
 mapVault.upload.compressing = Comprimendo mapa...
 mapVault.upload.complete = Subida completada
 mapVault.upload.complete.hint = ADVERTENCIA\: como el servidor puede haber cambiado el nombre de sus archivos, se recomienda encarecidamente que elimine el mapa de la carpeta de mapas y, en su lugar, lo instale utilizando la bóveda de mapas.
+# Fuzzy
 mapVault.upload.failed = Subida del mapa fallida. Los errores son los siguientes\:\n\n{0}
 mapVault.upload.mapSize = Tamaño
 mapVault.upload.players = Jugadores
@@ -643,6 +644,7 @@ settings.language = Idioma
 settings.notifications.toastPreview = Vista previa
 settings.notifications.toastPreview.title = Vista previa del POP UP
 settings.notifications.toastPreview.text = Así es como se muestra.
+# Fuzzy
 settings.language.helpUs.text = Downlords FAF Client La traducción es un esfuerzo de la comunidad. Si desea que el cliente se traduzca a otro idioma, nos encantaría su ayuda.
 settings.language.helpUs.button = Ayúdanos a traducir
 # Fuzzy
