Update messages_tr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -300,6 +300,7 @@ mapVault.upload.uploading = Harita karşıya yükleniyor...
 mapVault.upload.compressing = Harita sıkıştırılıyor...
 mapVault.upload.complete = Karşıya yükleme tamamlandı
 mapVault.upload.complete.hint = Dikkat\: Sunucu dosyalarınızı yeniden adlandırabileceğinden, kendi haritanızı kaldırıp harita kasasından yüklemeniz şiddetle tavsiye olunur
+# Fuzzy
 mapVault.upload.failed = Harita karşıya yükleme başarısız.Sunucu şu hataları verdi\:\n\n{0}
 mapVault.upload.mapSize = Boyut
 mapVault.upload.players = Oyuncular
@@ -621,6 +622,7 @@ settings.language = Dil
 settings.notifications.toastPreview = Önizleme
 settings.notifications.toastPreview.title = Açılır pencere önizleme
 settings.notifications.toastPreview.text = Böyle gözüküyor.
+# Fuzzy
 settings.language.helpUs.text = Downlord'un FAF istemci yerelleştirmesi topluluk girişimidir.İstemcinin farklı bir dile çevrildiğini görmek istersen yardımına seviniriz
 settings.language.helpUs.button = Dil çevirmemize yardım et
 # Fuzzy
@@ -788,6 +790,7 @@ startTab.save = Kaydet
 startTab.wantToConfigure = Başlangıç sekmesini seç\:
 startTab.configure = Yapılandır
 vault.replays.onlyShowLastYear = Yalnızca geçen yıldan
+# Fuzzy
 game.create.mapSize = Harita büyüklüğü
 game.generate = Yeni harita oluştur
 game.generate.dialog = Harita oluşturucu seçenekleri
