Update messages_uk.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_uk.properties
+++ b/src/main/resources/i18n/messages_uk.properties
@@ -314,6 +314,7 @@ mapVault.upload.uploading = Завантаженя мапи
 mapVault.upload.compressing = Стискаємо мапу
 mapVault.upload.complete = Завантаження завершено
 mapVault.upload.complete.hint = ВАЖЛИВО\: Оскільки сервер може перейменувати ваші файли, наполегливо рекомендуємо видалити дану карту з теки усіх карт і натомість встановити її зі сховища.
+# Fuzzy
 mapVault.upload.failed = Неможливо завантажити мапу.Сервер доповів про наступні помилки\:\n\n{0}
 mapVault.upload.mapSize = Розмір
 mapVault.upload.players = Гравці
@@ -638,6 +639,7 @@ settings.language = Мова
 settings.notifications.toastPreview = Показати
 settings.notifications.toastPreview.title = Попередній перегляд
 settings.notifications.toastPreview.text = Ось як це виглядає
+# Fuzzy
 settings.language.helpUs.text = Локалізація Downlord's FAF Client це справа  і зусилля спільноти.Якщо ви хочете бачити клієнт перекладений іншою мовою,то ми з радістю допоможемо.
 settings.language.helpUs.button = Допоможіть нам перекласти
 # Fuzzy
@@ -800,6 +802,7 @@ startTab.save = Зберегти
 startTab.wantToConfigure = Виберіть початкову сторінку\:
 startTab.configure = Налаштувати
 vault.replays.onlyShowLastYear = Тільки за останній рік
+# Fuzzy
 game.create.mapSize = Розмір Мапи
 game.generate = Створити нову мапу
 game.generate.dialog = Налаштування Створення Мапи
