Change name keys

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -991,13 +991,18 @@ search.beforeDate = End Date
 search.removeQuery = Remove Query
 game.globalRating = Global Rating
 game.ladderRating = Ladder Rating
-leaderboard.Ladder1v1League = 1v1 League
-leaderboard.TMM2v2League = 2v2 League
-leaderboard.team = Team League
-leaderboard.season.1v1League.season.1 = 1v1 Season 1
-leaderboard.season.2v2League.season.1 = 2v2 Season 1
-leaderboard.season.1v1League.season.2 = 1v1 Season 2
-leaderboard.season.2v2League.season.2 = 2v2 Season 2
+leaderboard.1v1_league = 1v1 League
+leaderboard.2v2_league = 2v2 League
+leaderboard.4v4_full_share_league = 4v4 Full Share League
+leaderboard.4v4_share_until_death_league = 4v4 No Share League
+leaderboard.season.1v1_league.season.1 = 1v1 Season 1
+leaderboard.season.1v1_league.season.2 = 1v1 Season 2
+leaderboard.season.2v2_league.season.1 = 2v2 Season 1
+leaderboard.season.2v2_league.season.2 = 2v2 Season 2
+leaderboard.season.4v4_fs_league.season.1 = 4v4 Season 1
+leaderboard.season.4v4_fs_league.season.2 = 4v4 Season 2
+leaderboard.season.4v4_sud_league.season.1 = 4v4 Season 1
+leaderboard.season.4v4_sud_league.season.2 = 4v4 Season 2
 leaderboard.seasonDate = {0} – {1}
 leaderboard.searchPrompt = Search player
 leaderboard.score = Score
@@ -1005,12 +1010,12 @@ leaderboard.totalPlayers = {0,number,#} players
 leaderboard.divisionName = {0} {1}
 leaderboard.placement = The System is still learning you. {0} out of {1} games played.
 leaderboard.noEntry = Play matchmaker games to get assigned to a division
-leagues.divisionName.1 = Bronze
-leagues.divisionName.2 = Silver
-leagues.divisionName.3 = Gold
-leagues.divisionName.4 = Diamond
-leagues.divisionName.5 = Master
-leagues.divisionName.6 = Grandmaster
+leagues.divisionName.bronze = Bronze
+leagues.divisionName.silver = Silver
+leagues.divisionName.gold = Gold
+leagues.divisionName.diamond = Diamond
+leagues.divisionName.master = Master
+leagues.divisionName.grandmaster = Grandmaster
 play.teamMatchmaking = Matchmaking
 teammatchmaking.inPlacement = In Placement
 teammatchmaking.searchAndInvite=Search and invite players
