--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -39,6 +39,7 @@ play.coop = Co-Op
 leaderboard.failedToLoad = Leaderboard could not be loaded
 leaderboard.loading = Loading leaderboard…
 leaderboard.noLeaderboards = There seem to be no leaderboards available
+leaderboard.failedToLoadLeaderboards = Leaderboards could not be loaded
 leaderboard.failedToLoadDivisions = Division list could not be loaded
 leaderboard.failedToLoadEntry = Your own entry could not be loaded
 coop.host.title = Host this Mission
