update links overview

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -714,11 +714,14 @@ linksTecHelpDiscord = Technical help on Discord
 linksTecHelpForum = Technical help on forum
 # Even tho shown as not used the following messages are used
 linksRules = Rules
-linksModerationReport = Moderation Report Form
+linksModerationReport = Moderation
 linksDiscord = Discord
 linksFacebook = Facebook
-linksDevNews = Dev Blog
 linksYoutube = YouTube
+twitch = Twitch
+patreon = Patreon
+twitter = Twitter
+wiki = Wiki
 settings.use.advancedIceLog = Write advanced information into an extra file about the ice adapter.
 mapVault.upload.rules = I confirm that I have read the rules concerning map upload.
 mapVault.upload.openRules = Show rules
