--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1029,8 +1029,8 @@ teammatchmaking.queueTitle.inParty = The party leader will join the queues
 teammatchmaking.queueTitle.inQueue = Your party is now in queue
 teammatchmaking.queue.ladder1v1 = 1v1
 teammatchmaking.queue.tmm2v2 = 2v2
-teammatchmaking.queue.tmm4v4FullShare = 4v4 Full Share
-teammatchmaking.queue.tmm4v4ShareUntilDeath = 4v4 No Share
+teammatchmaking.queue.tmm4v4_full_share = 4v4 Full Share
+teammatchmaking.queue.tmm4v4_share_until_death = 4v4 No Share
 chat.groupChat.playerDisconnect = {0} has disconnected
 chat.groupChat.playerConnect = {0} has connected
 game.generateMap.mexSlider = Mexes
@@ -1047,6 +1047,8 @@ replay.inParty = Replay could not be started because you are in a party. Leave t
 leaderboard.tmm_2v2.name = 2v2
 leaderboard.ladder_1v1.name = 1v1
 leaderboard.global.name = Global
+leaderboard.tmm_4v4_full_share.name = 4v4 Full Share
+leaderboard.tmm_4v4_share_until_death.name = 4v4 No Share
 leaderboard.gamesPlayed = {0} Games Played\: {1,number,#}
 leaderboard.rating = {0} Rating
 leaderboard.displayName = Leaderboard
