--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1123,3 +1123,4 @@ flag.loadError = Could not load flag for {0}
 view.couldNotLoad = Could not load view for {0} 
 matchmaker.cancelled = Matchmaker match cancelled by server due to lack of response from other players
 matchmaker.cancelled.title = Matchmaker game cancelled
+attribution.takenFrom = taken from
