Add league leaderboards (#1973)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -38,6 +38,10 @@ play.ranked1v1 = 1v1 ranked match
 play.coop = Co-Op
 leaderboard.failedToLoad = Leaderboard could not be loaded
 leaderboard.loading = Loading leaderboard…
+leaderboard.noLeaderboards = There seem to be no leaderboards available
+leaderboard.failedToLoadLeaderboards = Leaderboards could not be loaded
+leaderboard.failedToLoadDivisions = Division list could not be loaded
+leaderboard.failedToLoadEntry = Your own entry could not be loaded
 coop.host.title = Host this Mission
 coop.host.button = Host Game
 coop.leaderboard = Leaderboard
@@ -853,6 +857,8 @@ game.generateMap.none = None
 game.generateMap.lots = Lots
 settings.appearance.backgroundImage = Background image
 settings.appearance.backgroundImage.description = Setting a background image will increase memory consumption.
+settings.appearance.dateFormat = Date Format
+settings.appearance.dateFormat.description = In which format dates should be displayed in the client.
 settings.checkForPrerelease.description = When checking for client updates, also check for pre-releases.
 settings.prereleaseFeedback.description = Join our Discord channel to give feedback for client pre-releases.
 settings.general.startTab.description = The tab to open when you start the client.
@@ -938,8 +944,6 @@ game.generateMap.blind = Blind
 settings.date.system = Auto
 settings.date.mdy = Month/Day/Year
 settings.date.dmy = Day/Month/Year
-settings.chat.dateFormat = Date Format
-settings.chat.dateFormat.description = In which format the date should be displayed in the chat.
 chat.error.noHashTag = Channel Name must start with \# (Try \#{0})
 chat.message.addError = Could not add message to chat
 game.gameStatus.hosting = Hosting
@@ -973,49 +977,70 @@ vault.savedQueries = Favorites
 vault.saveQuery = Save Query
 map.onlyRanked = Only Ranked
 map.reviewScore = Review Score
-map.widthPixels=Width (in px)
-map.heightPixels=Height (in px)
-query.moreFilters=More Filters
-query.textFilter={0}\: {1}
-query.categoryFilter={0}\: {1}
-query.rangeFilter={0}\: {1} to {2}
-query.dateRangeFilter={0}\: from {1} to {2}
-query.afterDate=After
-query.beforeDate=Before
-mod.onlyRanked=Only Ranked
-mod.reviewScore=Review Score
-search.lowValue=Minimum
-search.highValue=Maximum
-search.afterDate=Start Date
-search.beforeDate=End Date
-search.removeQuery=Remove Query
-game.globalRating=Global Rating
-game.ladderRating=Ladder Rating
-leaderboard.divisionName=In Placement
-play.teamMatchmaking=Matchmaking
+map.widthPixels = Width (in px)
+map.heightPixels = Height (in px)
+query.moreFilters = More Filters
+query.textFilter = {0}\: {1}
+query.categoryFilter = {0}\: {1}
+query.rangeFilter = {0}\: {1} to {2}
+query.dateRangeFilter = {0}\: from {1} to {2}
+query.afterDate = After
+query.beforeDate = Before
+mod.onlyRanked = Only Ranked
+mod.reviewScore = Review Score
+search.lowValue = Minimum
+search.highValue = Maximum
+search.afterDate = Start Date
+search.beforeDate = End Date
+search.removeQuery = Remove Query
+game.globalRating = Global Rating
+game.ladderRating = Ladder Rating
+leaderboard.1v1_league = 1v1 League
+leaderboard.2v2_league = 2v2 League
+leaderboard.4v4_full_share_league = 4v4 Full Share League
+leaderboard.4v4_share_until_death_league = 4v4 No Share League
+leaderboard.season.1v1_league = 1v1 Season {0}
+leaderboard.season.2v2_league = 2v2 Season {0}
+leaderboard.season.4v4_fs_league = 4v4 Season {0}
+leaderboard.season.4v4_sud_league = 4v4 Season {0}
+leaderboard.seasonDate = {0} – {1}
+leaderboard.searchPrompt = Search player
+leaderboard.score = Score
+leaderboard.totalPlayers = {0,number,#} players
+leaderboard.divisionName = {0} {1}
+leaderboard.placement = The System is still learning you. {0} out of {1} games played.
+leaderboard.noEntry = Play matchmaker games to get assigned to a division
+leagues.divisionName.bronze = Bronze
+leagues.divisionName.silver = Silver
+leagues.divisionName.gold = Gold
+leagues.divisionName.diamond = Diamond
+leagues.divisionName.master = Master
+leagues.divisionName.grandmaster = Grandmaster
+play.teamMatchmaking = Matchmaking
+teammatchmaking.inPlacement = In Placement
 teammatchmaking.searchAndInvite=Search and invite players
 teammatchmaking.search.prompt=Name
 teammatchmaking.search.noOneInvited=You have not invited anybody yet
-teammatchmaking.leaveParty=Leave party
-teammatchmaking.invitePlayer=Invite players
-teammatchmaking.invite=Invite
-teammatchmaking.invitedPlayers=Invited players\:
-teammatchmaking.mapPool=Maplist
-teammatchmaking.playersInQueue=In Queue\: {0,number,#}
-teammatchmaking.queuePopTimer=Matching in\: {0,number,0}\:{1,number,00}
-teammatchmaking.gameCount=Games played\: {0,number,#}
-teammatchmaking.notification.invite.title=Invited to party
-teammatchmaking.notification.invite.message={0} has invited you to join their party
-teammatchmaking.notification.invite.join=Join
-teammatchmaking.match.found=Match found\!
-teammatchmaking.match.starting=Match launching...
-teammatchmaking.match.cancelled=Match cancelled\!
-teammatchmaking.notification.matchFound.title=Match found
-teammatchmaking.notification.matchFound.message=A match was found and will launch soon
-teammatchmaking.notification.inviteAlreadyInQueue.title=You are already in a queue
-teammatchmaking.notification.inviteAlreadyInQueue.message=Please leave all queues before inviting a player
-teammatchmaking.notification.joinAlreadyInQueue.title=You are already in a queue
-teammatchmaking.notification.joinAlreadyInQueue.message=Please leave all queues before joining a party
+teammatchmaking.leaveParty = Leave party
+teammatchmaking.invitePlayer = Invite players
+teammatchmaking.invite = Invite
+teammatchmaking.invitedPlayers = Invited players\:
+teammatchmaking.mapPool = Maplist
+teammatchmaking.playersInQueue = In Queue\: {0,number,#}
+teammatchmaking.queuePopTimer = Matching in\: {0,number,0}\:{1,number,00}
+teammatchmaking.gameCount = Games played\: {0,number,#}
+teammatchmaking.notification.invite.title = Invited to party
+teammatchmaking.notification.invite.message = {0} has invited you to join their party
+teammatchmaking.notification.invite.join = Join
+teammatchmaking.match.found = Match found\!
+teammatchmaking.match.starting = Match launching...
+teammatchmaking.match.cancelled = Match cancelled\!
+teammatchmaking.notification.matchFound.title = Match found
+teammatchmaking.notification.matchFound.message = A match was found and will launch soon
+teammatchmaking.notification.inviteAlreadyInQueue.title = You are already in a queue
+teammatchmaking.notification.inviteAlreadyInQueue.message = Please leave all queues before inviting a player
+teammatchmaking.notification.joinAlreadyInQueue.title = You are already in a queue
+teammatchmaking.notification.joinAlreadyInQueue.message = Please leave all queues before joining a party
 teammatchmaking.notification.customAlreadyInQueue.title = You are already in a matchmaking queue
 teammatchmaking.notification.customAlreadyInQueue.message = Please leave all queues before joining a custom game
 teammatchmaking.notification.gameAlreadyRunning.title = Already in game
