Fix season name keys

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -999,10 +999,10 @@ leaderboard.1v1_league = 1v1 League
 leaderboard.2v2_league = 2v2 League
 leaderboard.4v4_full_share_league = 4v4 Full Share League
 leaderboard.4v4_share_until_death_league = 4v4 No Share League
-leaderboard.season.1v1_league = 1v1 Season {0}
-leaderboard.season.2v2_league = 2v2 Season {0}
-leaderboard.season.4v4_fs_league = 4v4 Season {0}
-leaderboard.season.4v4_sud_league = 4v4 Season {0}
+leaderboard.season.1v1_season = 1v1 Season {0}
+leaderboard.season.2v2_season = 2v2 Season {0}
+leaderboard.season.4v4_fs_season = 4v4 Season {0}
+leaderboard.season.4v4_sud_season = 4v4 Season {0}
 leaderboard.seasonDate = {0} – {1}
 leaderboard.searchPrompt = Search player
 leaderboard.score = Score
