Use a sorted list for the chat user list over custom sorting

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -96,6 +96,7 @@ chat.channelNamePrompt = e.g. \#aeolus
 chat.messagePrompt = Type a message…
 chat.searchPrompt = Search…
 chat.category.moderators = Moderators
+chat.category.self = Me
 chat.category.friends = Friends
 chat.category.foes = Foes
 chat.category.others = Others
